<resources>
    
    <string name="app_name">CSDK Sample</string>

    <!-- Menu strings -->
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_resolution">Resolution</string>
    <string name="menu_audio_direction">Audio Direction</string>
    <string name="menu_video_direction">Video Direction</string>
    <string name="menu_camera">Camera Selection</string>

    <!-- Dialer -->
    <string name="dialer_title">Dialer</string>
    <string name="phone_number_hint">sip:3333@10.138.139.18</string>
    <string-array name="tel_num_context_menu_options">
        <item>Copy</item>
        <item>Paste</item>
        <item>Clear</item>
    </string-array>
    <string-array name="tel_num_options_copy_clear">
        <item>Copy</item>
        <item>Clear</item>
    </string-array>
    <string-array name="tel_num_option_paste">
        <item>Paste</item>
    </string-array>
    
    <!-- Incoming call dialog -->
    <string name="incoming_title">Incoming call</string>
    <string name="incoming_video_title">Incoming video call</string>
    <string name="incoming_message">Would you like to accept the incoming call from %s?</string>
    <string name="incoming_video_message">Would you like to accept the incoming video call from %s?</string>
    <string name="incoming_accept">Answer</string>
    <string name="incoming_reject">Reject</string>
    <string name="incoming_error">Error processing incoming call</string>
    
    <!-- IM activity strings -->
    <string name="im_title">IM</string>
    <string name="no_contacts">No contacts</string>
    <string name="im_contacts">Contacts</string>
    <string name="im_status">Status</string>
    <string name="im_custom_message">Custom message</string>
    <string name="im_custom_message_hint">Let people know what you\'re thinking/doing</string>
    <string name="conversation_header">Conversation with</string>
    <string-array name="conversation_options">
        <item>Continue conversation</item>
        <item>End conversation</item>
    </string-array>
    <string name="contact_item_status_message_hint">Custom status message</string>
    
    <!-- Conversation activity strings -->
    <string name="message_header_me">Me:</string>
    <string name="message_header_them">:</string>
    <string name="message_type_here_hint">Type your message here</string>
    <string name="conversation_end_query_text">Would you like to end the current conversation?</string>
    
    <!-- In call strings -->
    <string name="call_status_dialling">Dialling</string>
    <string name="call_status_ringing">Ringing</string>
    <string name="call_status_connected">Connected</string>
    <string name="call_status_incoming">Incoming</string>
    <string name="pip_toggle_on">Picture in Picture on</string>
    <string name="pip_toggle_off">Picture in Picture off</string>
	<string name="mute_audio_toggle_on">Audio mute on for all calls</string>
	<string name="mute_audio_toggle_off">Audio mute off for all calls</string>
	<string name="mute_video_toggle_on">Video mute on for all calls</string>
	<string name="mute_video_toggle_off">Video mute off for all calls</string>
	<string name="hold_toggle_on">Hold on</string>
	<string name="hold_toggle_off">Hold off</string>
    <string name="camera_toggle_front">Front camera</string>
    <string name="camera_toggle_back">Back camera</string>

    <string name="add_new_call">Add call</string>
    
    <!-- AED strings -->
    <string name="aed_title">AED</string>
    <string name="aed_connected_topics">Topics</string>
    <string name="aed_topic_data_title">Topic data</string>
    <string name="aed_console_title">Messages and notifications</string>
    <string name="aed_data_button">New data</string>
    <string name="aed_message_button">New message</string>
    <string name="aed_connect_button_label">Connect</string>
    <string name="aed_disconnect">Disconnect</string>
    <!-- <string name="aed_connect_topic">Connect</string> -->
    <string name="aed_connect_topic_dialog_title">Connect to a topic</string>
    <!-- <string name="aed_create_topic_name_label">Name</string> -->
    <string name="aed_create_topic_expiry_label">Expiry (minutes)(optional)</string>
    <!-- <string-array name="aed_test_topics">
        <item>topic1</item>
        <item>topic2</item>
        <item>topic3</item>
        <item>topic4</item>
        <item>topic1</item>
        <item>topic2</item>
        <item>topic3</item>
        <item>topic4</item>
        <item>topic1</item>
        <item>topic2</item>
        <item>topic3</item>
        <item>topic4</item>
        <item>topic1</item>
        <item>topic2</item>
        <item>topic3</item>
        <item>topic4</item>
    </string-array> -->
    <!-- <string-array name="aed_test_data">
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
        <item>data</item>
    </string-array> -->
    <string name="aed_dialog_name_hint">Topic name</string>
    <string name="aed_disconnect_dialog_delete_label">Delete topic?</string>
    <string name="aed_create_message_dialog_title">New message</string>
    <string name="aed_create_message_dialog_hint">Enter your new message here</string>
    <string name="aed_disconnect_button_not_connected">You must be connected to a Topic before you can disconnect</string>
    <string name="aed_data_button_not_connected">You must be connected to a Topic before you can add data</string>
    <string name="aed_message_button_not_connected">You must be connected to a Topic before you can send any messages</string>
    <string name="aed_edit_data_dialog_title">Edit data</string>
    <string name="aed_new_data_dialog_title">Add new data</string>
    <string name="aed_edit_data_key_label">Key</string>
    <string name="aed_edit_data_value_label">Value</string>
    <string name="aed_edit_data_delete_button_label">Delete</string>
    <string name="aed_edit_data_key_hint">Data key</string>
    <string name="aed_edit_data_value_hint">Data value</string>
    
    <!-- Miscellaneous -->
    <string name="logout_dialog_message">You are about to go back to the login screen, do you want to logout and go back, or stay in the dialer logged in?</string>
    <string name="unknownName">Unknown name</string>
    <string name="unknownAddress">Unknown address</string>
    <string name="userTitle">%1$s | %2$s</string>
    <string name="send_button_label">Send</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_active_calls">Click here to show %s active call(s)</string>
    
    <!-- About Activity Strings -->
    <string name="title_activity_about">About</string>
    <string name="about_app_version">Sample App version:</string>
    <string name="about_sdk_version">Client SDK version:</string>
    
    <!--  Resolution Activity Strings -->
    <string name="title_activity_resolution">Select Video Resolution</string>
    <string name="multiple_calls_large_screens">Multiple calls are only allowed on large screen devices</string>
    
    <!--  Camera Selection Activity Strings -->
    <string name="title_activity_camera_selection">Select Camera</string>
    
    <!--  Media Direction Selection Activity Strings -->
    <string name="title_activity_select_media_direction">Select Direction</string>
    
    <!-- Audio Menu -->
    <string name="earpiece">Earpiece</string>
	<string name="speaker">Speaker</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="wired">Wired</string>
</resources>