<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_camera"
        android:title="@string/menu_camera"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="10"
        android:menuCategory="secondary"/>       
    <item
        android:id="@+id/menu_resolution"
        android:title="@string/menu_resolution"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="10"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="20"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/menu_audio_direction"
        android:title="@string/menu_audio_direction"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="14"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/menu_video_direction"
        android:title="@string/menu_video_direction"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="15"
        android:menuCategory="secondary"/>
    
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="30"
        android:menuCategory="secondary"/>

</menu>