<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/active_calls_bar"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/aed_connected_topics"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/aed_topic_data_title"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">

                <Button
                    android:id="@+id/aedConnectButton"
                    style="@style/ButtonDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aed_connect_button_label"
                    android:textSize="13sp"/>

                <Button
                    android:id="@+id/aedDisconnectButton"
                    style="@style/ButtonDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aed_disconnect"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    android:id="@+id/aedDataButton"
                    style="@style/ButtonDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aed_data_button"
                    android:textSize="13sp"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/topicsList"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ListView
                android:id="@+id/dataList"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </TableRow>
        
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <LinearLayout
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aed_console_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/aedMessageButton"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aed_message_button"
                android:textSize="13sp"/>
            
        </LinearLayout>

        <ScrollView
            android:id="@+id/consoleScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/msgNoteView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"/>

        </ScrollView>
        
    </LinearLayout>

</LinearLayout>